<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="300sp"
        android:padding="24dp"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:id="@+id/message"
            android:text="@string/BACK_PRESS_ALERT_MESSAGE"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_below="@+id/message">


            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:padding="8dp"
                android:textColor="@color/grey_800"
                android:id="@+id/leave_page"
                android:textStyle="bold"
                android:text="@string/EXIT"/>


            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.3"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:padding="8dp"
                android:textColor="@color/colorAccent"
                android:id="@+id/stay_on_page"
                android:layout_gravity="right"
                android:gravity="right"
                android:textStyle="bold"
                android:text="@string/KEEP_WRITING"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>