<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            app:srcCompat="@drawable/ic_arrow"
            android:padding="8dp"
            android:id="@+id/go_back"
            android:tint="@color/grey_600"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_marginLeft="16dp"
            android:textStyle="bold"
            android:text="Help"
            android:textColor="@color/grey_600"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:text="P Neck Support Team"
            android:textColor="@color/grey_800"/>
        <View
            android:layout_width="110dp"
            android:layout_height="3dp"
            android:background="@color/primary_600"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:id="@+id/call_layout"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/grey_500"
                android:layout_centerVertical="true"
                android:text="Contact"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/ic_phone"
                    android:tint="@color/grey_800"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/grey_800"
                    android:layout_centerVertical="true"
                    android:text="@string/PNECK_SUPPORT_NUMBER"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/email_layout"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="24dp"
                android:textColor="@color/grey_500"
                android:layout_centerVertical="true"
                android:text="Email"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/ic_email"
                    android:tint="@color/grey_800"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/grey_800"
                    android:layout_centerVertical="true"
                    android:text="@string/PNECK_SUPPORT_EMAIL"/>

            </LinearLayout>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/grey_800"
            android:layout_marginTop="24dp"
            android:layout_centerVertical="true"
            android:text="@string/SUPPORT_MESSAGE"/>

    </LinearLayout>


    <com.balysv.materialripple.MaterialRippleLayout
        style="@style/RippleStyleWhite"
        android:layout_width="match_parent"
        android:id="@+id/drop_a_mail"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="@color/primary_600">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="DROP A MAIL"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@android:color/white" />
    </com.balysv.materialripple.MaterialRippleLayout>

</RelativeLayout>